[gd_scene load_steps=7 format=2]

[ext_resource path="res://Presentacion/8.gd" type="Script" id=1]
[ext_resource path="res://Sprites/layers/parallax-mountain-bg.png" type="Texture" id=2]
[ext_resource path="res://Scenes/key.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/layers/parallax-mountain-montain-far.png" type="Texture" id=10]
[ext_resource path="res://Sprites/layers/parallax-mountain-foreground-trees.png" type="Texture" id=11]

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="Parallax-mountain-bg" type="Sprite" parent="."]
position = Vector2( -99, 30 )
scale = Vector2( 3.75, 3.7 )
texture = ExtResource( 2 )

[node name="Parallax-mountain-montain-far" type="Sprite" parent="."]
position = Vector2( -59, -46 )
scale = Vector2( 3.75, 3.7 )
texture = ExtResource( 10 )

[node name="Parallax-mountain-foreground-trees" type="Sprite" parent="."]
position = Vector2( -89, 72 )
texture = ExtResource( 11 )

[node name="Keys" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="A" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -178, 5 )

[node name="S" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -159, 5 )
key = "S"

[node name="D" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -140, 5 )
key = "D"

[node name="F" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -121, 5 )
key = "F"

[node name="G" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -102, 5 )
key = "G"

[node name="H" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -83, 5 )
key = "H"

[node name="J" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -64, 5 )
key = "J"

[node name="K" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -45, 5 )
key = "K"

[node name="L" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -26, 5 )
key = "L"

[node name="Z" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -169, 28 )
key = "Z"

[node name="X" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -150, 28 )
key = "X"

[node name="C" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -131, 28 )
key = "C"

[node name="V" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -112, 28 )
key = "V"

[node name="B" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -93, 28 )
key = "B"

[node name="N" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -74, 28 )
key = "N"

[node name="M" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -55, 28 )
key = "M"

[node name="Q" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -189, -19 )
key = "Q"

[node name="W" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -169, -18 )
key = "W"

[node name="E" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -150, -18 )
key = "E"

[node name="R" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -131, -18 )
key = "R"

[node name="T" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -112, -18 )
key = "T"

[node name="Y" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -93, -18 )
key = "Y"

[node name="U" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -74, -18 )
key = "U"

[node name="I" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -55, -18 )
key = "I"

[node name="O" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -36, -18 )
key = "O"

[node name="P" parent="Keys" instance=ExtResource( 8 )]
position = Vector2( -17, -18 )
key = "P"

[node name="player" parent="." instance=ExtResource( 9 )]
position = Vector2( -177, 0 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -104, 4 )
z_index = 1
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="DinoSpawn" type="Node2D" parent="."]
position = Vector2( 284, -78 )

[node name="Label2" type="Label" parent="."]
margin_left = -356.0
margin_top = -147.0
margin_right = 150.0
margin_bottom = -11.0
text = "Puedes usar todas
 las teclas"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = -356.0
margin_top = -147.0
margin_right = 150.0
margin_bottom = 63.0
text = "Demo?"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = -182.0
margin_top = 21.0
margin_right = -2.00002
margin_bottom = 75.0
rect_scale = Vector2( 0.8, 0.8 )
theme_type_variation = "MiniButton"
text = "Obviously"
